--- a/index.html
+++ b/index.html
@@ -1,35 +1,404 @@
-function togglePump() {
-  const username = localStorage.getItem("loggedInUser");
-  if (!username) return;
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+  <meta charset="UTF-8" />
+  <title>Smart Planting - لوحة تحكم الري الذكي</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    * {
+      box-sizing: border-box;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
 
-  const desiredState = pumpOn ? false : true;
+    body {
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      min-height: 100vh;
+      direction: rtl;
+      padding-top: 70px; /* لإفساح مساحة للرأس */
+    }
 
-  fetch("/control", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ username: username, relayState: desiredState }),
-  })
-  .then(res => res.text())
-  .then(data => {
-    console.log(data);
-    pumpOn = desiredState;
-    updatePumpStatus();
-  })
-  .catch(err => console.error(err));
-}
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 60px;
+      background: linear-gradient(90deg, #0072ff, #00c6ff);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 20px;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.3);
+      z-index: 1000;
+      user-select: none;
+    }
 
-// تحديث القراءات كل 3 ثواني
-setInterval(() => {
-  const username = localStorage.getItem("loggedInUser");
-  if (!username) return;
+    .project-title {
+      font-size: 1.6em;
+      font-weight: 700;
+      color: white;
+      font-family: 'Segoe UI Black', Tahoma, Geneva, Verdana, sans-serif;
+      letter-spacing: 1.5px;
+    }
 
-  fetch(`/data?username=${username}`)
-    .then(res => res.json())
-    .then(data => {
-      document.getElementById("temp").innerText = data.temperature.toFixed(2);
-      document.getElementById("humidity").innerText = data.soil;
-      pumpOn = data.relayState;
+    .lang-switch {
+      background-color: white;
+      color: #0072ff;
+      border: none;
+      font-weight: 700;
+      padding: 6px 10px;
+      border-radius: 6px;
+      cursor: pointer;
+      width: 38px;
+      height: 38px;
+      font-size: 1em;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: background-color 0.3s ease;
+    }
+
+    .lang-switch:hover {
+      background-color: #d0e7ff;
+    }
+
+    .container {
+      background-color: #1e1e2f;
+      padding: 30px;
+      border-radius: 12px;
+      width: 90%;
+      max-width: 450px;
+      box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
+      position: relative;
+    }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 25px;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 5px;
+      margin-top: 15px;
+    }
+
+    input {
+      width: 100%;
+      padding: 10px;
+      border-radius: 6px;
+      border: none;
+      outline: none;
+      margin-bottom: 10px;
+      background-color: #2e2e44;
+      color: white;
+      font-size: 1em;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      background: linear-gradient(to right, #0072ff, #00c6ff);
+      border: none;
+      border-radius: 6px;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      margin-top: 15px;
+      transition: 0.3s ease;
+      font-size: 1em;
+    }
+
+    button:hover {
+      transform: scale(1.03);
+      box-shadow: 0 0 10px #00c6ff;
+    }
+
+    #dashboard {
+      display: none;
+    }
+
+    .sensor-box,
+    .control-box {
+      background-color: #2e2e44;
+      border-radius: 10px;
+      padding: 15px;
+      margin-top: 20px;
+    }
+
+    .status {
+      font-weight: bold;
+      font-size: 1.2em;
+      color: #00ffae;
+    }
+
+    .logout {
+      background: linear-gradient(to right, #f85032, #e73827);
+    }
+
+    .sensor-label {
+      color: #aaa;
+    }
+
+    #errorMsg {
+      color: #ff4e50;
+      font-weight: bold;
+      margin-top: 10px;
+      display: none;
+      text-align: center;
+      font-size: 0.95em;
+    }
+
+    @media screen and (max-width: 500px) {
+      .container {
+        padding: 20px;
+      }
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="project-title" id="projectTitle">Smart Planting</div>
+    <button class="lang-switch" onclick="toggleLanguage()">EN</button>
+  </header>
+
+  <div class="container">
+    <!-- تسجيل الدخول -->
+    <div id="login">
+      <h2 id="loginTitle">تسجيل الدخول</h2>
+      <form onsubmit="return login(event)">
+        <label id="usernameLabel">اسم المستخدم</label>
+        <input type="text" id="username" required autocomplete="username" />
+
+        <label id="passwordLabel">كلمة المرور</label>
+        <input type="password" id="password" required autocomplete="current-password" />
+
+        <button type="submit" id="loginBtn">دخول</button>
+        <p id="errorMsg"></p>
+      </form>
+    </div>
+
+    <!-- لوحة التحكم -->
+    <div id="dashboard">
+      <h2 id="dashboardTitle">لوحة تحكم الري الذكي</h2>
+      <p id="welcomeText">مرحبًا، <span id="usernameDisplay"></span></p>
+
+      <div class="sensor-box">
+        <h3 id="sensorTitle">قراءات الحساسات</h3>
+        <p><span class="sensor-label" id="tempLabel">درجة الحرارة:</span> <span id="temp" class="status">--</span> °C</p>
+        <p><span class="sensor-label" id="humidityLabel">الرطوبة:</span> <span id="humidity" class="status">--</span> %</p>
+      </div>
+
+      <div class="control-box">
+        <h3 id="controlTitle">التحكم في المضخة</h3>
+        <p id="pumpStatusText">الحالة الحالية: <span id="pumpStatus" class="status">مطفأة</span></p>
+        <button onclick="togglePump()" id="pumpBtn">تشغيل / إيقاف</button>
+      </div>
+
+      <button class="logout" onclick="logout()" id="logoutBtn">تسجيل الخروج</button>
+    </div>
+  </div>
+
+  <script>
+    const users = {
+      user1: "pass1",
+      user2: "pass2",
+      user3: "pass3",
+      user4: "pass4",
+    };
+
+    let pumpOn = false;
+    let currentLang = "ar";
+
+    const texts = {
+      ar: {
+        loginTitle: "تسجيل الدخول",
+        usernameLabel: "اسم المستخدم",
+        passwordLabel: "كلمة المرور",
+        loginBtn: "دخول",
+        errorWrong: "❌ اسم المستخدم أو كلمة المرور غير صحيحة",
+        dashboardTitle: "لوحة تحكم الري الذكي",
+        welcomeText: "مرحبًا، ",
+        sensorTitle: "قراءات الحساسات",
+        tempLabel: "درجة الحرارة:",
+        humidityLabel: "الرطوبة:",
+        controlTitle: "التحكم في المضخة",
+        pumpStatusOn: "شغالة",
+        pumpStatusOff: "مطفأة",
+        pumpStatusText: "الحالة الحالية: ",
+        pumpBtn: "تشغيل / إيقاف",
+        logoutBtn: "تسجيل الخروج",
+        projectTitle: "Smart Planting"
+      },
+      en: {
+        loginTitle: "Login",
+        usernameLabel: "Username",
+        passwordLabel: "Password",
+        loginBtn: "Login",
+        errorWrong: "❌ Wrong username or password",
+        dashboardTitle: "Smart Irrigation Dashboard",
+        welcomeText: "Welcome, ",
+        sensorTitle: "Sensor Readings",
+        tempLabel: "Temperature:",
+        humidityLabel: "Humidity:",
+        controlTitle: "Pump Control",
+        pumpStatusOn: "On",
+        pumpStatusOff: "Off",
+        pumpStatusText: "Current Status: ",
+        pumpBtn: "Toggle Pump",
+        logoutBtn: "Logout",
+        projectTitle: "Smart Planting"
+      }
+    };
+
+    function translateUI() {
+      const t = texts[currentLang];
+      document.getElementById("loginTitle").innerText = t.loginTitle;
+      document.getElementById("usernameLabel").innerText = t.usernameLabel;
+      document.getElementById("passwordLabel").innerText = t.passwordLabel;
+      document.getElementById("loginBtn").innerText = t.loginBtn;
+      document.getElementById("dashboardTitle").innerText = t.dashboardTitle;
+      document.getElementById("welcomeText").childNodes[0].textContent = t.welcomeText;
+      document.getElementById("sensorTitle").innerText = t.sensorTitle;
+      document.getElementById("tempLabel").innerText = t.tempLabel;
+      document.getElementById("humidityLabel").innerText = t.humidityLabel;
+      document.getElementById("controlTitle").innerText = t.controlTitle;
+      document.getElementById("pumpStatusText").childNodes[0].textContent = t.pumpStatusText;
+      document.getElementById("pumpBtn").innerText = t.pumpBtn;
+      document.getElementById("logoutBtn").innerText = t.logoutBtn;
+      document.getElementById("projectTitle").innerText = t.projectTitle;
+
+      // غير اتجاه الصفحة حسب اللغة
+      document.body.dir = currentLang === "ar" ? "rtl" : "ltr";
+
+      // غير نص زر التبديل للغة الثانية
+      document.querySelector(".lang-switch").innerText = currentLang === "ar" ? "EN" : "ع";
+    }
+
+    function toggleLanguage() {
+      currentLang = currentLang === "ar" ? "en" : "ar";
+      translateUI();
+    }
+
+    function login(event) {
+      event.preventDefault();
+      const username = document.getElementById("username").value.trim();
+      const password = document.getElementById("password").value;
+      const errorMsg = document.getElementById("errorMsg");
+
+      if (users[username] === password) {
+        errorMsg.style.display = "none";
+        localStorage.setItem("loggedInUser", username);
+        showDashboard();
+      } else {
+        errorMsg.innerText = texts[currentLang].errorWrong;
+        errorMsg.style.display = "block";
+      }
+    }
+
+    function showDashboard() {
+      const username = localStorage.getItem("loggedInUser");
+      if (!username) {
+        showLogin();
+        return;
+      }
+      document.getElementById("usernameDisplay").innerText = username;
+      document.getElementById("login").style.display = "none";
+      document.getElementById("dashboard").style.display = "block";
+
       updatePumpStatus();
-    })
-    .catch(err => console.error(err));
-}, 3000);
+    }
+
+    function showLogin() {
+      localStorage.removeItem("loggedInUser");
+      document.getElementById("login").style.display = "block";
+      document.getElementById("dashboard").style.display = "none";
+      document.getElementById("errorMsg").style.display = "none";
+      document.getElementById("username").value = "";
+      document.getElementById("password").value = "";
+    }
+
+    function logout() {
+      showLogin();
+    }
+
+    function togglePump() {
+      pumpOn = !pumpOn;
+      updatePumpStatus();
+    }
+
+    function updatePumpStatus() {
+      const pumpStatusElem = document.getElementById("pumpStatus");
+      const pumpStatusText = document.getElementById("pumpStatusText");
+      if (pumpOn) {
+        pumpStatusElem.innerText = texts[currentLang].pumpStatusOn;
+        pumpStatusElem.style.color = "#00ffae";
+      } else {
+        pumpStatusElem.innerText = texts[currentLang].pumpStatusOff;
+        pumpStatusElem.style.color = "#ff4e50";
+      }
+    }
+
+    // أول ما تحمل الصفحة، شغل ترجمة وشيك إذا في تسجيل دخول سابق
+    window.onload = function() {
+      translateUI();
+      if (localStorage.getItem("loggedInUser")) {
+        showDashboard();
+      } else {
+        showLogin();
+      }
+    };
+  </script>
+</body>
+</html>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8PJXF1MEZP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8PJXF1MEZP');
+</script>
+<!-- أضف هذا السكريبت في الأسفل بعد الكود الموجود -->
+<script>
+  async function getDataFromServer() {
+    const username = localStorage.getItem("loggedInUser");
+    if (!username) return;
+
+    try {
+      const response = await fetch(`/data?username=${username}`);
+      if (!response.ok) throw new Error("No data found");
+
+      const data = await response.json();
+      document.getElementById("temp").innerText = data.temperature?.toFixed(1) || "--";
+      document.getElementById("humidity").innerText = data.soil || "--";
+      document.getElementById("pumpStatus").innerText = data.relayState ? texts[currentLang].pumpStatusOn : texts[currentLang].pumpStatusOff;
+      document.getElementById("pumpStatus").style.color = data.relayState ? "#00ffae" : "#ff4e50";
+    } catch (error) {
+      console.error("Error fetching data:", error);
+    }
+  }
+
+  // استدعيها بعد تسجيل الدخول
+  function showDashboard() {
+    const username = localStorage.getItem("loggedInUser");
+    if (!username) {
+      showLogin();
+      return;
+    }
+    document.getElementById("usernameDisplay").innerText = username;
+    document.getElementById("login").style.display = "none";
+    document.getElementById("dashboard").style.display = "block";
+
+    getDataFromServer();
+    setInterval(getDataFromServer, 5000); // يحدث البيانات كل 5 ثواني
+  }
+</script>
